--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 
 body {
     background-color: black;
+    overflow: hidden;
 }
 
 /* Project loader */
@@ -169,7 +170,9 @@ body {
     height: calc(100% - 2.5rem);
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
     overflow: hidden;
+    overflow-y: scroll;
 }
 #object-data div {
     background-color: var(--sec-background-color);
@@ -179,6 +182,7 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
+    flex: 0 0 auto;
 }
 #object-data h2 {
     color: var(--main-text-color);
@@ -249,6 +253,21 @@ body {
 #all-object-data button:hover {
     background-color: var(--sec-background-color);
 }
+#object-data-add-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 2em;
+    height: 2em;
+    border: none;
+    background-color: var(--main-background-color);
+    color: var(--main-text-color);
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+#object-data-add-close:hover {
+    background-color: var(--sec-background-color);
+}
 
 /* Main controls */
 #main-controls {
@@ -278,4 +297,21 @@ body {
 }
 #main-controls button:hover {
     background-color: var(--sec-background-color);
+}
+
+/* Scene */
+#scene {
+    width: calc(100% - 40em);
+    height: 80%;
+    position: absolute;
+    top: 10%;
+    left: 20em;
+    border: 2px solid var(--sec-background-color);
+    z-index: -1;
+    /*
+    background-color: black;
+    background-image: url(assets/images/editor/grid.png);
+    background-size: 75px 75px;
+    image-rendering: pixelated;
+    */
 }
