--- a/style.css
+++ b/style.css
@@ -291,8 +291,8 @@ body {
     justify-content: center;
 }
 #main-controls button {
-    width: 6em;
-    height: 6em;
+    width: 5em;
+    height: 5em;
     cursor: pointer;
     background-color: var(--main-background-color);
     border: 2px solid var(--sec-background-color);
@@ -301,9 +301,28 @@ body {
     padding: 0;
     font-weight: bold;
     transition: background-color 0.3s;
+    margin: 0.5em;
+    position: relative;
 }
 #main-controls button:hover {
     background-color: var(--sec-background-color);
+}
+#main-controls div {
+    border: 2px solid var(--sec-background-color);
+}
+#main-controls p {
+    color: var(--main-text-color);
+    font-weight: bold;
+    text-align: center;
+    position: relative;
+}
+#main-controls img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 0;
 }
 
 /* Scene */
@@ -314,7 +333,7 @@ body {
     top: 10%;
     left: 20em;
     border: 2px solid var(--sec-background-color);
-    z-index: -1;
+    z-index: -2;
     /*
     background-color: black;
     background-image: url(assets/images/editor/grid.png);
